force-app/main/default/objects/abc_Archived_Order__b/abc_Archived_Order__b.object-meta.xml
<CustomObject>
    <label>Archived Order</label>
    <pluralLabel>Archived Orders</pluralLabel>
</CustomObject>