force-app/main/default/objects/abc_Archived_Order__b/fields/abc_City__c.field-meta.xml
<CustomField>
    <fullName>abc_City__c</fullName>
    <label>City</label>
    <type>Text</type>
    <length>100</length>
</CustomField>