force-app/main/default/objects/abc_Archived_Order__b/fields/abc_Client_Type__c.field-meta.xml
<CustomField>
    <fullName>abc_Client_Type__c</fullName>
    <label>Client Type</label>
    <type>Text</type>
    <length>50</length>
</CustomField>