force-app/main/default/objects/abc_Archived_Order__b/fields/abc_Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>abc_Customer_Email__c</fullName>
    <inlineHelpText>Unindexed denormalized customer email.</inlineHelpText>
    <label>Customer Email</label>
    <type>Email</type>
</CustomField>