force-app/main/default/objects/abc_Archived_Order__b/fields/abc_Detailed_Address__c.field-meta.xml
<CustomField>
    <fullName>abc_Detailed_Address__c</fullName>
    <description>Detailed address of the customer stored as a long text area in the archive.</description>
    <label>Detailed Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>