force-app/main/default/objects/abc_Archived_Order__b/fields/abc_External_Cart_Id__c.field-meta.xml
<CustomField>
    <fullName>abc_External_Cart_Id__c</fullName>
    <label>External Cart ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>