force-app/main/default/objects/abc_Archived_Order__b/fields/abc_Governorate__c.field-meta.xml
<CustomField>
    <fullName>abc_Governorate__c</fullName>
    <label>Governorate</label>
    <type>Text</type>
    <length>100</length>
</CustomField>