force-app/main/default/objects/abc_Archived_Order__b/fields/abc_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>abc_Order_Date__c</fullName>
    <inlineHelpText>Leading field of the Big Object Index.</inlineHelpText>
    <label>Order Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>