force-app/main/default/objects/abc_Archived_Order__b/fields/abc_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>abc_Order_Number__c</fullName>
    <inlineHelpText>Trailing field of the Big Object Index (Max 80 chars).</inlineHelpText>
    <label>Order Number</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>