force-app/main/default/objects/abc_Archived_Order__b/fields/abc_Order_Total__c.field-meta.xml
<CustomField>
    <fullName>abc_Order_Total__c</fullName>
    <label>Order Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>