force-app/main/default/objects/abc_Archived_Order__b/fields/abc_Status__c.field-meta.xml
<CustomField>
    <fullName>abc_Status__c</fullName>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>